fix: id: 45994-FE-Responsive Page: Extra white space issue (#520)

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -102,7 +102,7 @@ $modal-footer-background:                        #fff !default; //add $global-ba
 }
 
 .autoHeight {
-  height: calc(100vh - 400px);
+  height: auto;
   overflow: auto;
 }
 
